Add minimal styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,45 @@
 .App {
-  text-align: center;
+  color: red;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#calculator {
+  width: 30vw;
+  height: 50vh;
+  background-color: #e0e0e0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.screen {
+  width: 100%;
+  height: 10%;
+  background-color: #858694;
+  text-align: right;
   color: white;
+  font-size: larger;
 }
 
-.App-link {
-  color: #61dafb;
+#numbers {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  height: 90%;
+  gap: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.zero {
+  grid-column: 1/3;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+button:focus {
+  background-color: #f4e9e9;
+}
+
+.special {
+  background-color: #f5913e;
 }
